VCC=../../utils/bin/vcc$(EXEEXT)
OUTDIR=../../basev/strife/progs
COMMON_PROGS_DIR=../../basev/common/progs

noinst_DATA = $(OUTDIR)/svprogs.dat $(OUTDIR)/clprogs.dat

$(OUTDIR)/svprogs.dat: $(VCC) $(srcdir)/*.vc $(srcdir)/game/*.vc \
		$(COMMON_PROGS_DIR)/linespec.dat
	@mkdir -p $(OUTDIR)
	$(VCC) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/svprogs.vc $@

$(OUTDIR)/clprogs.dat: $(VCC) $(OUTDIR)/svprogs.dat $(srcdir)/*.vc $(srcdir)/cgame/*.vc
	$(VCC) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/clprogs.vc $@

EXTRA_DIST = compile.bat \
	clprogs.vc \
	svprogs.vc \
	cgame/classes.vc \
	cgame/ClientGame.vc \
	cgame/ConDialog.vc \
	cgame/ConDlgChoice.vc \
	cgame/ConSlideshow1.vc \
	cgame/ConSlideshow2.vc \
	cgame/FinaleScreen.vc \
	cgame/IntermissionScreen.vc \
	cgame/MenuBigTextButton.vc \
	cgame/MenuChoice.vc \
	cgame/MenuChoice_AddLights.vc \
	cgame/MenuChoice_AdvancedVideoOptions.vc \
	cgame/MenuChoice_ApplyVidMode.vc \
	cgame/MenuChoice_AspectRatio.vc \
	cgame/MenuChoice_BitDepth.vc \
	cgame/MenuChoice_Brightness.vc \
	cgame/MenuChoice_CDMusic.vc \
	cgame/MenuChoice_ClipLights.vc \
	cgame/MenuChoice_Colour.vc \
	cgame/MenuChoice_ColouredLights.vc \
	cgame/MenuChoice_Controls.vc \
	cgame/MenuChoice_Controls2.vc \
	cgame/MenuChoice_Croshair.vc \
	cgame/MenuChoice_CroshairTrans.vc \
	cgame/MenuChoice_D3DBlendSprites.vc \
	cgame/MenuChoice_D3DDither.vc \
	cgame/MenuChoice_D3DModelLights.vc \
	cgame/MenuChoice_D3DSpecular.vc \
	cgame/MenuChoice_D3DTextureFilter.vc \
	cgame/MenuChoice_Darkening.vc \
	cgame/MenuChoice_DarkenLights.vc \
	cgame/MenuChoice_DeathMatch.vc \
	cgame/MenuChoice_DrawFPS.vc \
	cgame/MenuChoice_DynamicLights.vc \
	cgame/MenuChoice_EndGame.vc \
	cgame/MenuChoice_ExternalMusic.vc \
	cgame/MenuChoice_ExtraSamples.vc \
	cgame/MenuChoice_GLBlendSprites.vc \
	cgame/MenuChoice_GLModelLights.vc \
	cgame/MenuChoice_GLSpecular.vc \
	cgame/MenuChoice_GLTextureFilter.vc \
	cgame/MenuChoice_GoToConsole.vc \
	cgame/MenuChoice_Help.vc \
	cgame/MenuChoice_HiResTextures.vc \
	cgame/MenuChoice_InvertMouse.vc \
	cgame/MenuChoice_JoinAt.vc \
	cgame/MenuChoice_JoinGame.vc \
	cgame/MenuChoice_Level.vc \
	cgame/MenuChoice_LoadGame.vc \
	cgame/MenuChoice_LoadSlot.vc \
	cgame/MenuChoice_Lookspring.vc \
	cgame/MenuChoice_LookStrafe.vc \
	cgame/MenuChoice_Models.vc \
	cgame/MenuChoice_Monsters.vc \
	cgame/MenuChoice_MouseLook.vc \
	cgame/MenuChoice_MouseOptions.vc \
	cgame/MenuChoice_MouseXSensitivity.vc \
	cgame/MenuChoice_MouseYSensitivity.vc \
	cgame/MenuChoice_MPSkill.vc \
	cgame/MenuChoice_Multiplayer.vc \
	cgame/MenuChoice_MusicVolume.vc \
	cgame/MenuChoice_NewGame.vc \
	cgame/MenuChoice_NewNetGame.vc \
	cgame/MenuChoice_OnOff.vc \
	cgame/MenuChoice_Options.vc \
	cgame/MenuChoice_PlayerName.vc \
	cgame/MenuChoice_Players.vc \
	cgame/MenuChoice_PlayerSetup.vc \
	cgame/MenuChoice_QuitGame.vc \
	cgame/MenuChoice_SaveGame.vc \
	cgame/MenuChoice_SaveSlot.vc \
	cgame/MenuChoice_ScreenResolution.vc \
	cgame/MenuChoice_ScreenSize.vc \
	cgame/MenuChoice_Search.vc \
	cgame/MenuChoice_SinglePlayer.vc \
	cgame/MenuChoice_Skill.vc \
	cgame/MenuChoice_SoundSettings.vc \
	cgame/MenuChoice_SoundVolume.vc \
	cgame/MenuChoice_SpanDrawing.vc \
	cgame/MenuChoice_SpecularLevel.vc \
	cgame/MenuChoice_SpriteDelta.vc \
	cgame/MenuChoice_SpriteOffset.vc \
	cgame/MenuChoice_StartGame.vc \
	cgame/MenuChoice_SwapStereo.vc \
	cgame/MenuChoice_TimeLimit.vc \
	cgame/MenuChoice_VideoMode.vc \
	cgame/MenuChoice_VideoOptions.vc \
	cgame/MenuChoice_ViewModels.vc \
	cgame/MenuChoice_Windowed.vc \
	cgame/MenuChoiceEnum.vc \
	cgame/MenuChoiceEpisode.vc \
	cgame/MenuChoiceSlider.vc \
	cgame/MenuControlKey.vc \
	cgame/MenuHelpPage.vc \
	cgame/MenuInputLine.vc \
	cgame/MenuMainTitleImage.vc \
	cgame/MenuObject.vc \
	cgame/MenuSaveSlot.vc \
	cgame/MenuScreen.vc \
	cgame/MenuScreenAdvancedVideoOptions.vc \
	cgame/MenuScreenControls.vc \
	cgame/MenuScreenControls2.vc \
	cgame/MenuScreenEpisode.vc \
	cgame/MenuScreenJoinGame.vc \
	cgame/MenuScreenHelp.vc \
	cgame/MenuScreenLoadGame.vc \
	cgame/MenuScreenMain.vc \
	cgame/MenuScreenMouseOptions.vc \
	cgame/MenuScreenMultiplayer.vc \
	cgame/MenuScreenNewNetGame.vc \
	cgame/MenuScreenOptions.vc \
	cgame/MenuScreenPlayerSetup.vc \
	cgame/MenuScreenQuit.vc \
	cgame/MenuScreenSaveGame.vc \
	cgame/MenuScreenScreenResolution.vc \
	cgame/MenuScreenSinglePlayer.vc \
	cgame/MenuScreenSkill.vc \
	cgame/MenuScreenSList.vc \
	cgame/MenuScreenSoundOptions.vc \
	cgame/MenuScreenVideoOptions.vc \
	cgame/MenuSelector_SmallLeft.vc \
	cgame/MenuSelector_SmallRight.vc \
	cgame/MenuSelector_Spinner.vc \
	cgame/MenuSList.vc \
	cgame/MenuSmallTextButton.vc \
	cgame/MenuSpriteAnim.vc \
	cgame/MenuStaticAnim.vc \
	cgame/MenuStaticBitmap.vc \
	cgame/MenuTextButton.vc \
	cgame/MenuTitleText.vc \
	cgame/StatusBarScreen.vc \
	cgame/TitleScreen.vc \
	game/Acolyte.vc \
	game/AcolyteBlue.vc \
	game/AcolyteDGreen.vc \
	game/AcolyteGold.vc \
	game/AcolyteGray.vc \
	game/AcolyteLGreen.vc \
	game/AcolyteRed.vc \
	game/AcolyteRust.vc \
	game/AcolyteShadow.vc \
	game/AcolyteTan.vc \
	game/AcolyteToBe.vc \
	game/Actor.vc \
	game/AlienAspClimber.vc \
	game/AlienBubbleColumn.vc \
	game/AlienCeilingBubble.vc \
	game/AlienChunkLarge.vc \
	game/AlienChunkSmall.vc \
	game/AlienFloorBubble.vc \
	game/AlienSpectre1.vc \
	game/AlienSpectre2.vc \
	game/AlienSpectre3.vc \
	game/AlienSpectre4.vc \
	game/AlienSpectre5.vc \
	game/AlienSpiderLight.vc \
	game/AmmoFiller.vc \
	game/AmmoFillup.vc \
	game/AmmoSatchel.vc \
	game/Anvil.vc \
	game/Armorer.vc \
	game/AssaultGun.vc \
	game/AssaultGunStanding.vc \
	game/Bang4Cloud.vc \
	game/BarKeep.vc \
	game/BarricadeColumn.vc \
	game/BaseKey.vc \
	game/Beggar.vc \
	game/Beggar1.vc \
	game/Beggar2.vc \
	game/Beggar3.vc \
	game/Beggar4.vc \
	game/Beggar5.vc \
	game/BeldinsRing.vc \
	game/BigTree2.vc \
	game/BishopMissile.vc \
	game/Blood.vc \
	game/BloodSplash.vc \
	game/BloodSplashBase.vc \
	game/BlueCrystalKey.vc \
	game/BoxOfBullets.vc \
	game/BrassKey.vc \
	game/BrokenPowerCoupling.vc \
	game/BurningBowl.vc \
	game/BurningBrazier.vc \
	game/CageLight.vc \
	game/Candle.vc \
	game/CatacombKey.vc \
	game/CavePillarBottom.vc \
	game/CavePillarTop.vc \
	game/CeilingChain.vc \
	game/CeilingTurret.vc \
	game/ChapelKey.vc \
	game/ChimneyStack.vc \
	game/classes.vc \
	game/ClientGameBaseEx.vc \
	game/ClipOfBullets.vc \
	game/CloseDoor222.vc \
	game/Coin.vc \
	game/Communicator.vc \
	game/Computer.vc \
	game/CoreKey.vc \
	game/CrateOfMissiles.vc \
	game/Crusader.vc \
	game/CrusaderMissile.vc \
	game/DeadAcolyte.vc \
	game/DeadCrusader.vc \
	game/DeadPeasant.vc \
	game/DeadRebel.vc \
	game/DeadReaver.vc \
	game/DeadStrifePlayer.vc \
	game/Decoration.vc \
	game/DegninOre.vc \
	game/DummyStrifeItem.vc \
	game/Ear.vc \
	game/Effect.vc \
	game/ElectricBolt.vc \
	game/ElectricBolts.vc \
	game/EnergyPack.vc \
	game/EnergyPod.vc \
	game/EntityBoss.vc \
	game/EntityNest.vc \
	game/EntityPod.vc \
	game/EntitySecond.vc \
	game/EnvironmentalSuit.vc \
	game/ExplosiveBarrel2.vc \
	game/FactoryKey.vc \
	game/FastFlameMissile.vc \
	game/FireDroplet.vc \
	game/FlameMissile.vc \
	game/FlameThrower.vc \
	game/FlameThrowerParts.vc \
	game/ForceFieldGuard.vc \
	game/Gold10.vc \
	game/Gold25.vc \
	game/Gold50.vc \
	game/Gold300.vc \
	game/GoldKey.vc \
	game/GovsKey.vc \
	game/GuardUniform.vc \
	game/GunTraining.vc \
	game/HealthFillup.vc \
	game/HealthTraining.vc \
	game/HeartsInTank.vc \
	game/HEGrenade.vc \
	game/HEGrenadeRounds.vc \
	game/HugeTorch.vc \
	game/IDBadge.vc \
	game/IDCard.vc \
	game/Info.vc \
	game/InterrogatorReport.vc \
	game/Inquisitor.vc \
	game/InquisitorArm.vc \
	game/InquisitorShot.vc \
	game/Junk.vc \
	game/KlaxonWarningLight.vc \
	game/KneelingGyu.vc \
	game/LargeTorch.vc \
	game/LavaSmoke.vc \
	game/LavaSplash.vc \
	game/LeatherArmor.vc \
	game/LightBrownFluorescent.vc \
	game/LightGlobe.vc \
	game/LightGoldFluorescent.vc \
	game/LightSilverFluorescent.vc \
	game/Loremaster.vc \
	game/LoreShot.vc \
	game/LoreShot2.vc \
	game/Macil1.vc \
	game/Macil2.vc \
	game/MainGameInfo.vc \
	game/Mauler.vc \
	game/Mauler2.vc \
	game/MaulerKey.vc \
	game/MaulerPuff.vc \
	game/MaulerTorpedo.vc \
	game/MaulerTorpedoWave.vc \
	game/Meat.vc \
	game/Medic.vc \
	game/MedicalKit.vc \
	game/MediumTorch.vc \
	game/MedPatch.vc \
	game/Merchant.vc \
	game/MetalArmor.vc \
	game/MetalPot.vc \
	game/MilitaryID.vc \
	game/MineKey.vc \
	game/MiniMissile.vc \
	game/MiniMissileLauncher.vc \
	game/MiniMissiles.vc \
	game/Mug.vc \
	game/NewKey5.vc \
	game/OfferingChalice.vc \
	game/OfficersUniform.vc \
	game/OpenDoor222.vc \
	game/OpenDoor224.vc \
	game/Oracle.vc \
	game/OracleKey.vc \
	game/OraclePass.vc \
	game/OrderKey.vc \
	game/OutsideLamp.vc \
	game/PalmTree.vc \
	game/Passcard.vc \
	game/Pawn.vc \
	game/Peasant.vc \
	game/Peasant1.vc \
	game/Peasant2.vc \
	game/Peasant3.vc \
	game/Peasant4.vc \
	game/Peasant5.vc \
	game/Peasant6.vc \
	game/Peasant7.vc \
	game/Peasant8.vc \
	game/Peasant9.vc \
	game/Peasant10.vc \
	game/Peasant11.vc \
	game/Peasant12.vc \
	game/Peasant13.vc \
	game/Peasant14.vc \
	game/Peasant15.vc \
	game/Peasant16.vc \
	game/Peasant17.vc \
	game/Peasant18.vc \
	game/Peasant19.vc \
	game/Peasant20.vc \
	game/Peasant21.vc \
	game/Peasant22.vc \
	game/PhosphorousFire.vc \
	game/PhosphorousGrenade.vc \
	game/PhosphorusGrenadeRounds.vc \
	game/PileOfGuts.vc \
	game/PillarAlienPower.vc \
	game/PillarAztec.vc \
	game/PillarAztecDamaged.vc \
	game/PillarAztecRuined.vc \
	game/PillarHugeTech.vc \
	game/PillarTechno.vc \
	game/Piston.vc \
	game/Pitcher.vc \
	game/Player.vc \
	game/PlayerPawn.vc \
	game/PoisonBolt.vc \
	game/PoisonBolts.vc \
	game/PoleLatern.vc \
	game/Pot.vc \
	game/PottedTree.vc \
	game/Power1Key.vc \
	game/Power2Key.vc \
	game/Power3Key.vc \
	game/PowerCoupling.vc \
	game/PowerCrystal.vc \
	game/PrisonKey.vc \
	game/PrisonPass.vc \
	game/Programmer.vc \
	game/ProgrammerBase.vc \
	game/Projectile.vc \
	game/PunchDagger.vc \
	game/QuakeFocus.vc \
	game/QuestItem.vc \
	game/QuestItem1.vc \
	game/QuestItem2.vc \
	game/QuestItem3.vc \
	game/QuestItem4.vc \
	game/QuestItem5.vc \
	game/QuestItem6.vc \
	game/QuestItem7.vc \
	game/QuestItem8.vc \
	game/QuestItem9.vc \
	game/QuestItem10.vc \
	game/QuestItem11.vc \
	game/QuestItem12.vc \
	game/QuestItem13.vc \
	game/QuestItem14.vc \
	game/QuestItem15.vc \
	game/QuestItem16.vc \
	game/QuestItem17.vc \
	game/QuestItem18.vc \
	game/QuestItem19.vc \
	game/QuestItem20.vc \
	game/QuestItem21.vc \
	game/QuestItem22.vc \
	game/QuestItem23.vc \
	game/QuestItem24.vc \
	game/QuestItem25.vc \
	game/QuestItem26.vc \
	game/QuestItem27.vc \
	game/QuestItem28.vc \
	game/QuestItem29.vc \
	game/QuestItem30.vc \
	game/QuestItem31.vc \
	game/RaiseAlarm.vc \
	game/RatBuddy.vc \
	game/Reaver.vc \
	game/Rebel.vc \
	game/Rebel1.vc \
	game/Rebel2.vc \
	game/Rebel3.vc \
	game/Rebel4.vc \
	game/Rebel5.vc \
	game/Rebel6.vc \
	game/RebelBoots.vc \
	game/RebelHelmet.vc \
	game/RebelShirt.vc \
	game/RedCrystalKey.vc \
	game/RocketTrail.vc \
	game/Rubble1.vc \
	game/Rubble2.vc \
	game/Rubble3.vc \
	game/Rubble4.vc \
	game/Rubble5.vc \
	game/Rubble6.vc \
	game/Rubble7.vc \
	game/Rubble8.vc \
	game/SacrificedGuy.vc \
	game/Scanner.vc \
	game/SecurityKey.vc \
	game/Sentinel.vc \
	game/SentinelFX1.vc \
	game/SentinelFX2.vc \
	game/SeveredHand.vc \
	game/ShadowArmor.vc \
	game/ShortBush.vc \
	game/Sigil.vc \
	game/Sigil1.vc \
	game/Sigil2.vc \
	game/Sigil3.vc \
	game/Sigil4.vc \
	game/Sigil5.vc \
	game/SigilBanner.vc \
	game/SilverKey.vc \
	game/SlideshowStarter.vc \
	game/SlimeChunk.vc \
	game/SlimeSplash.vc \
	game/SludgeChunk.vc \
	game/SludgeSplash.vc \
	game/SmallTorchLit.vc \
	game/SmallTorchUnlit.vc \
	game/SoundSequence.vc \
	game/SoundSequenceSlot.vc \
	game/SpectralLightningBall1.vc \
	game/SpectralLightningBall2.vc \
	game/SpectralLightningBase.vc \
	game/SpectralLightningBigBall1.vc \
	game/SpectralLightningBigBall2.vc \
	game/SpectralLightningBigV1.vc \
	game/SpectralLightningBigV2.vc \
	game/SpectralLightningH1.vc \
	game/SpectralLightningH2.vc \
	game/SpectralLightningH3.vc \
	game/SpectralLightningHTail.vc \
	game/SpectralLightningSpot.vc \
	game/SpectralLightningV1.vc \
	game/SpectralLightningV2.vc \
	game/SRock1.vc \
	game/SRock2.vc \
	game/SRock3.vc \
	game/SRock4.vc \
	game/SStalactiteBig.vc \
	game/SStalactiteSmall.vc \
	game/SStalagmiteBig.vc \
	game/SStalagmiteSmall.vc \
	game/Stalker.vc \
	game/StaticLightSource.vc \
	game/StaticRGBLightSource.vc \
	game/Statue.vc \
	game/StatueRuined.vc \
	game/StickInWater.vc \
	game/Stool.vc \
	game/StrifeBishop.vc \
	game/StrifeBurningBarrel.vc \
	game/StrifeCandelabra.vc \
	game/StrifeCrossbow.vc \
	game/StrifeCrossbow2.vc \
	game/StrifeGrenadeLauncher.vc \
	game/StrifeGrenadeLauncher2.vc \
	game/StrifeHumanoid.vc \
	game/StrifeKey.vc \
	game/StrifeLevelInfo.vc \
	game/StrifeMap.vc \
	game/StrifePlayer.vc \
	game/StrifePuff.vc \
	game/StrifeSpark.vc \
	game/StrifeWeapon.vc \
	game/StrifeWorldInfo.vc \
	game/StrifeZap1.vc \
	game/SurgeryCrab.vc \
	game/SurgeryKit.vc \
	game/TallBush.vc \
	game/Tank1.vc \
	game/Tank2.vc \
	game/Tank3.vc \
	game/Tank4.vc \
	game/Tank5.vc \
	game/Tank6.vc \
	game/Targeter.vc \
	game/TargetPractice.vc \
	game/TechLampBrass.vc \
	game/TechLampSilver.vc \
	game/TeleporterBeacon.vc \
	game/TeleportFog.vc \
	game/TeleportSwirl.vc \
	game/Templar.vc \
	game/Tray.vc \
	game/TreeStub.vc \
	game/Tub.vc \
	game/UpgradeAccuracy.vc \
	game/UpgradeStamina.vc \
	game/WarehouseKey.vc \
	game/WaterBottle.vc \
	game/WaterDrip.vc \
	game/WaterDropOnFloor.vc \
	game/WaterfallSplash.vc \
	game/WaterFountain.vc \
	game/WaterSplash.vc \
	game/WaterSplashBase.vc \
	game/WeaponSmith.vc \
	game/WoodenBarrel.vc \
	game/Zombie.vc \
	game/ZombieSpawner.vc

MOSTLYCLEANFILES = \
	$(OUTDIR)/svprogs.dat $(OUTDIR)/svprogs.txt \
	$(OUTDIR)/clprogs.dat $(OUTDIR)/clprogs.txt
