CFLAGS=@ACC_CFLAGS@
CPPFLAGS=@ACC_CPPFLAGS@
DEFS=
LDFLAGS=@ACC_LDFLAGS@
LIBS=@ACC_LIBS@

noinst_PROGRAMS = ../bin/acc

___bin_acc_SOURCES = \
	acc.c \
	common.h \
	error.c \
	error.h \
	misc.c \
	misc.h \
	parse.c \
	parse.h \
	pcode.c \
	pcode.h \
	strlist.c \
	strlist.h \
	symbol.c \
	symbol.h \
	token.c \
	token.h
