CFLAGS=@GLBSP_CFLAGS@
CPPFLAGS=@GLBSP_CPPFLAGS@
DEFS=-DGLBSP_PLUGIN -DUNIX -DINLINE_G=inline
LDFLAGS=@GLBSP_LDFLAGS@
LIBS=@GLBSP_LIBS@

noinst_LIBRARIES=libglbsp.a

libglbsp_a_SOURCES = \
	analyze.c  \
	analyze.h  \
	blockmap.c \
	blockmap.h \
	glbsp.c    \
	glbsp.h    \
	level.c    \
	level.h    \
	node.c     \
	node.h     \
	reject.c   \
	reject.h   \
	seg.c      \
	seg.h      \
	structs.h  \
	system.c   \
	system.h   \
	util.c     \
	util.h     \
	wad.c      \
	wad.h
EXTRA_DIST = \
	AUTHORS.txt \
	CHANGES.txt \
	COPYING.txt \
	INSTALL.txt \
	README.txt \
	TODO.txt \
	TRICKS.txt \
	USAGE.txt
